--- a/menu.html
+++ b/menu.html
@@ -1158,7 +1158,7 @@
               <div id="u287_div" class=""></div>
               <!-- Unnamed () -->
               <div id="u288" class="text" style="visibility: visible;">
-                <p style="font-size:18px;"><span style="font-family:'FontAwesome';font-weight:409;font-style:normal;"> </span><span style="font-family:'微软雅黑';font-weight:400;font-style:normal;font-size:14px;">电脑访问www.AxureUX.com可查看完整演示</span></p>
+                <p style="font-size:18px;"><span style="font-family:'FontAwesome';font-weight:409;font-style:normal;"> </span><span style="font-family:'微软雅黑';font-weight:400;font-style:normal;font-size:14px;">电脑访问http://t.cn/R0UVmPl可查看完整演示</span></p>
               </div>
             </div>
 
